fix contact spacing

--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ body {
 /*============= CONTACT =============*/ 
 .contactHeader {
   background: white;
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 .contactSection {
   margin: 0;
